--- a/notebooks/W06. Hypothesis Testing.ipynb
+++ b/notebooks/W06. Hypothesis Testing.ipynb
@@ -1383,7 +1383,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Occupation with biggest pay gap between men and women: Transportation and materials moving\n",
+        "Occupation with biggest pay gap between men and women: Production\n",
         "Occupation with smallest pay gap : Lawyers, Judges, Physicians and dentists"
       ],
       "metadata": {
