--- a/notebooks/W07. Linear Regression.ipynb
+++ b/notebooks/W07. Linear Regression.ipynb
@@ -2008,6 +2008,84 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Sex: C(sex)[T.2] = –5.1971*\n",
+        "\n",
+        "(p < 0.001)\n",
+        "\n",
+        "Women earn $5.20 less per hour than men, holding schooling, age, union status, and race constant.\n",
+        "\n",
+        "This effect is large and highly statistically significant."
+      ],
+      "metadata": {
+        "id": "V0dLwAiwCmlX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Workers with no union coverage earn $0.62 less per hour than the reference group (union = 0).\n",
+        "This effect is small but statistically significant.\n",
+        "\n",
+        "Union members earn $1.55 more per hour than the reference group, holding everything else constant.\n",
+        "This is a meaningful and statistically significant union wage premium.\n",
+        "\n",
+        "Workers who are covered by a union but not members earn about $0.59 less, but this effect is not statistically significant, so we cannot conclude a difference."
+      ],
+      "metadata": {
+        "id": "4R5-3JC5Cn0_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Black non-Hispanic workers earn $2.68 less per hour than White non-Hispanic workers, all else equal.\n",
+        "This is statistically significant.\n",
+        "\n",
+        "Hispanic workers earn $1.23 less per hour than White non-Hispanic workers.\n",
+        "This effect is significant.\n",
+        "\n",
+        "Workers in the “other race” category earn essentially the same as White non-Hispanic workers."
+      ],
+      "metadata": {
+        "id": "nrkXSFoPC49S"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Each additional unit of schooling is associated with a $2.07 increase in hourly wages, holding age, sex, union, and race constant.\n",
+        "\n",
+        "Each additional year of age is associated with a $0.17 increase in hourly wage, controlling for other factors.\n",
+        "\n",
+        "This suggests a modest but significant return to experience."
+      ],
+      "metadata": {
+        "id": "FyOPT5mKDBTL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "R-squared = 0.244\n",
+        "→ The model explains 24.4% of the variation in real hourly wages."
+      ],
+      "metadata": {
+        "id": "kHVpBaicDJoj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "F-statistic is highly significant (p < 0.001)\n",
+        "→ The model as a whole is statistically significant: at least one predictor helps explain variation in wages."
+      ],
+      "metadata": {
+        "id": "qEKekvUjDKvF"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "w-rKtGuJvJ3t"
       },
@@ -2259,10 +2337,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "C(sex)[T.2] = Female relative to Male (reference)\n",
+        "b) C(sex)[T.2] = Female relative to Male (reference)\n",
         "Negative coefficient → women earn less.\n",
         "\n",
-        "except : Doctors & Lawyers\n",
+        "# except : Doctors & Lawyers\n",
         "\n",
         "+0.82 (not significant)\n",
         "→ No significant gender gap; if anything, women earn slightly more.\n"
